codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_unavailable_limits_message.snap
---
source: tui/src/status/tests.rs
assertion_line: 892
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                              │
│                                                        │
│ 访问 https://chatgpt.com/codex/settings/usage 获取最新 │
│ 限额与额度信息                                         │
│                                                        │
│  模型:         gpt-5.1-codex-max (推理 无, 总结 自动)  │
│  目录:         /workspace/tests                        │
│  权限:         自定义 (read-only, on-request)          │
│  Agents.md:    无                                      │
│                                                        │
│  Token 用量:   750 总计  (500 输入 + 250 输出)         │
│  上下文窗口:   剩余 100% (750 已用 / 272K)             │
│  限额:         暂无数据                                │
╰────────────────────────────────────────────────────────╯
